# monorepo-template

./: .gitignore  .tool-versions  LICENSE  Procfile  README.md  docker-compose.yml  ecosystem.config.js  env.example  hosts.example  project.code-workspace
api/: Dockerfile  Gemfile
api-docs/: index.html  insomnia.json
api/app/controllers/: application_controller.rb  passwords_controller.rb  sessions_controller.rb  uploads_controller.rb  users_controller.rb
api/app/controllers/admin/: base_controller.rb
api/app/controllers/concerns/: api_authentication.rb  (+1 more)
api/app/jobs/: task_parse_job.rb  trigger_execution_job.rb
api/app/models/: session.rb  user.rb
api/app/services/: util.rb
api/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  recurring.yml  routes.rb
api/config/environments/: development.rb
api/db/: schema.rb
api/db/migrate/: 20241108181420_add_token_to_session.rb  20241127015729_add_queue_migration_to_dev.rb
api/lib/tasks/: example.rake
chat-api/: .gitignore  pyproject.toml
chat-api/app/: auth.py  server.py
chat-api/app/db/: crud.py  database.py  models.py
deploy/nginx/: nginx.conf  nginx.sh
webapp/: index.html  package.json  pnpm-lock.yaml  serve.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
webapp/src/: App.jsx  states.jsx
webapp/src/components/: LogoutButton.jsx
webapp/src/layout/: AppSidebar.jsx  DashboardLayout.jsx  HomeLayout.jsx  ProtectedLayout.jsx
webapp/src/lib/: utils.ts
webapp/src/pages/: AuthRouter.jsx  Dashboard.jsx  Login.jsx  Registration.jsx
webapp/src/utils/: utils.js
(+2 files in other folders)
